[tool.poetry]
name = "transformers-question-answering"
version = "0.1.0"
description = "Wikipedia based question answering system using huggingface transformers"
authors = ["adimyth <mishraaditya6991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wikipedia = "^1.4.0"
pre-commit = "^2.7.1"
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.5.3"
tensorflow = "^2.3.0"
transformers = "3.0.0"
streamlit = "0.62.1"
torch = "^1.6.0"
attrdict = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
